--- a/assets/views/index.hbs
+++ b/assets/views/index.hbs
@@ -1,3 +1,9 @@
-<form action="/subscribe/" method="POST">
-  <input type="text" name="email" placeholder="email">
-</form>
+<div class="root-container">
+  <canvas id="c"></canvas>
+  <h1>Something awesome is under way.</h1>
+  <p>Please sign up for our newsletter and more info.</p>
+  <form id="subscribe-form" action="/subscribe/" method="POST">
+    <input type="text" name="email" placeholder="email">
+    <button id="subscribe">Subscribe</button>
+  </form>
+</div>
