--- a/assets/styles/_base.sass
+++ b/assets/styles/_base.sass
@@ -15,7 +15,7 @@ h3,
 div,
 li
   font-family: 'Lato', sans-serif
-  
+
 p
   font-size: 14px
 
@@ -31,6 +31,7 @@ button
   &:hover
     cursor: pointer
   @extend .no-user-select
+  @extend .linear-transition
 
 .no-user-select
   -webkit-touch-callout: none
