--- a/assets/styles/_index.sass
+++ b/assets/styles/_index.sass
@@ -1,3 +1,8 @@
+@keyframes pop
+  50%
+    transform: scale(1.2)
+
+
 .root-container
   background: #01081f linear-gradient(#396bff, #01081f)
   min-height: 100vh
@@ -6,27 +11,28 @@
   justify-content: center
   align-items: center
   flex-direction: column
-  input[type="text"]
-    background-color: transparent
-    border: 2px solid white
-    color: white
-    outline: none
-    padding: 5px
-    font-size: 16px
+  #subscribe-containter
     margin-bottom: 100px
-    width: 250px
-    &::-webkit-input-placeholder
+    input[type="text"]
+      background-color: transparent
+      border: 2px solid white
       color: white
-  button
-    background-color: white
-    padding: 5px
-    color: #162349
-    border-radius: 0
-    font-size: 16px
-    border: 2px solid white
-    // &:hover
-    //   background-color: rgb(195, 195, 195)
-    //   border: 2px solid rgb(195, 195, 195)
+      outline: none
+      padding: 5px
+      font-size: 16px
+      width: 250px
+      &::-webkit-input-placeholder
+        color: white
+    button
+      background-color: white
+      padding: 5px
+      color: #162349
+      border-radius: 0
+      font-size: 16px
+      border: 2px solid white
+      margin-left: 10px
+      &:hover
+        animation: pop 0.2s linear 1
   p
     color: white
     font-size: 18px
