--- a/assets/styles/_index.sass
+++ b/assets/styles/_index.sass
@@ -1,3 +1,5 @@
+@import "base"
+
 @keyframes pop
   50%
     transform: scale(1.2)
@@ -11,8 +13,19 @@
   justify-content: center
   align-items: center
   flex-direction: column
+  canvas
+    transform: scale(0.8)
+    @extend .linear-transition
+    @media screen and (min-width: 400px)
+      transform: scale(1)
   #subscribe-containter
     margin-bottom: 100px
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    @media screen and (min-width: 400px)
+      flex-direction: row
     input[type="text"]
       background-color: transparent
       border: 2px solid white
@@ -20,7 +33,8 @@
       outline: none
       padding: 5px
       font-size: 16px
-      width: 250px
+      min-width: 250px
+      max-width: 90vw
       &::-webkit-input-placeholder
         color: white
     button
@@ -30,12 +44,19 @@
       border-radius: 0
       font-size: 16px
       border: 2px solid white
-      margin-left: 10px
+      margin-left: 0
+      margin-top: 10px
+      @media screen and (min-width: 400px)
+        margin-left: 10px
+        margin-top: 0
       &:hover
         animation: pop 0.2s linear 1
-  p
+  p,
+  h1
+    text-align: center
     color: white
+    max-width: 90vw
+  p
     font-size: 18px
   h1
-    color: white
     margin-bottom: 0
